[package]
name = "duba_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
dotenvy = "0.15"
songbird = { version = "0.3.2", default-features = true, features = ["yt-dlp"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2"
